# qt-bodies

./: CMakeLists.txt  Main.qml  bodyqml.h  main.cpp  nbodies.cpp  nbodies.h
docs/: appqt_bodies.js  index.html
docs/qt_bodies/: appqt_bodies.qmltypes  appqt_bodies_qml_module_dir_map.qrc  copyifexists.cmake  qmldir
docs/qt_bodies/data/: earth_moon.txt  solar_system.txt  sun_earth_moon.txt  sun_mercury_venus_earth_mars.txt
